<resources>
    <string name="app_name">ATLAS NOTES</string>
    <string name="action_settings">Settings</string>
    <string name="context_menu_delete">Удалить</string>
    <string name="context_menu_foget">Забыть</string>
    <string name="non_urgent_unimportant">Non-Urgent Unimportant</string>
    <string name="non_urgent_important">Non-Urgent Important</string>
    <string name="urgent_unimportant">Urgent Unimportant</string>
    <string name="urgent_important">Urgent Important</string>

    <string name="menu_action_save">Сохранить</string>
    <string name="menu_action_edit">Редактировать</string>
    <string name="menu_action_delete">Удалить</string>
    <string name="task_category_item">Категория</string>
    <string name="task_name_label">Задача</string>
    <string name="task_dateCreation_item">Дата создания</string>
    <string name="task_describe_label">Описание</string>

</resources>
