<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_black"
        android:orderInCategory="100"
        android:title="@string/menu_action_edit"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black"
        android:orderInCategory="100"
        android:title="@string/menu_action_save"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black"
        android:orderInCategory="100"
        android:title="@string/menu_action_delete"
        app:showAsAction="ifRoom|withText"/>
</menu>
